# gateway/docs/swagger.yaml
@@ -46,6 +46,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/domain.TextEntities'
+        "204":
+          description: No Content
+          schema:
+            $ref: '#/definitions/responses.HTTPError'
         "500":
           description: Internal Server Error
           schema:
@@ -71,6 +75,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/domain.TextEntities'
+        "204":
+          description: No Content
+          schema:
+            $ref: '#/definitions/responses.HTTPError'
         "400":
           description: Bad Request
           schema:
